# atol-bpa-datamapper

./: .gitignore  CHANGELOG.md  README.md  REFACTORING_STRATEGY.md  pyproject.toml  temp.py
atol_bpa_datamapper/: filter_packages.py  utils.py
deprecated/scripts/: test_commands.sh  test_pipeline.sh  test_with_container.sh
dev/resources/: taxid_to_AUGUSTUSdataset.tsv
dev/scripts/: analyse_decision_log.R  explore_specimens.py  flatten_mapping_output.R  read_atol_schemas.py  test_commands.sh
dev/workflow/: run_mapper.smk
dev/workflow/rules/: analysis.smk  datamapper.smk  pull_bpa_db.smk
dev/workflow/scripts/: analyse_decision_log.R  flatten_mapping_output.R
src/: filter_packages.py  map_metadata.py
src/atol_bpa_datamapper/: arg_parser.py  common.py  config_parser.py  enhanced_package_handler.py  filter_packages.py  filter_packages_refactored.py  io.py  logger.py  map_metadata.py  map_metadata_refactored.py  organism_mapper.py  package_handler.py  pipeline.py  process_pipeline.py  processing_framework.py  resolve_organism.py  transform_data.py  utils.py
src/atol_bpa_datamapper/config/: field_mapping_bpa_to_atol.json  field_mapping_bpa_to_atol_packages.json  field_mapping_bpa_to_atol_resources.json  sanitization_config.json  specimen_ignored_fields.json  specimen_representative_selection.json  value_mapping_bpa_to_atol.json
src/atol_bpa_datamapper/utils/: common.py
tests/: conftest.py  test_helpers.py
tests/fixtures/: invalid_json.json  invalid_structure.json  sample_mapped_data.json  test_data.py  test_field_mapping.json  test_field_mapping_packages.json  test_field_mapping_resources.json  test_package_data.json  test_sanitization_config.json  test_value_mapping.json
tests/integration/: test_config_parser.py  test_config_parser_integration.py  test_config_parser_integration_refactored.py  test_filter_packages.py  test_filter_packages_counter_output.py  test_map_metadata.py  test_package_handler.py  test_package_handler_integration.py  test_transform_data_integration.py
tests/unit/: test_config_parser.py  test_filter_packages.py  test_filter_packages_unit.py  test_helpers.py  test_map_metadata.py  test_map_metadata_unit.py  test_package_handler.py  test_sanitization.py  test_transform_data_unit.py
