[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "atol-bpa-datamapper"
dynamic = ["version"]
description = "Map data from the BPA data portal for AToL's Genome Engine"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Tom Harrop", email = "tharrop@unimelb.edu.au" }]
dependencies = ["jsonlines>=4.0.0"]
requires-python = ">= 3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 3 - Alpha",
    "Private :: Do Not Upload",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
filter-packages = "atol_bpa_datamapper.filter_packages:main"

[project.urls]
Homepage = "https://github.com/tomharrop/atol-bpa-datamapper"


[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = "atol_bpa_datamapper"
include = ["LICENSE", "README.md"]
