[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["ckanapi>=4.8", "jsonlines>=4.0.0"]
name = "atol-bpa-datamapper"
dynamic = ["version"]
description = "Map data from the BPA data portal for AToL's Genome Engine"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Tom Harrop", email = "tharrop@unimelb.edu.au" }]
requires-python = ">=3.12,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
filter-packages = "atol_bpa_datamapper.filter_packages:main"
map-metadata = "atol_bpa_datamapper.map_metadata:main"

[project.urls]
Homepage = "https://github.com/tomharrop/atol-bpa-datamapper"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.package-data]
atol_bpa_datamapper = ["config/*.json"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
